# libdeflate

./: CMakeLists.txt  common_defs.h
.github/workflows/: ci.yml
lib/: adler32.c
lib/arm/: adler32_impl.h  cpu_features.c  cpu_features.h
programs/: emscripten-main.cpp  wasi-main.c
